log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:38:54 PM UTC: 
 tests:  0|6
total_score: 0/70
8a0f249
Thu 30 Mar 2023 03:47:14 PM UTC: 
 arraylist.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:46: error: expected ‘)’ before ‘;’ token
   15 |   ArrayList *lista = malloc(sizeof(ArrayList);
      |                            ~                 ^
      |                                              )
arraylist.c:18:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   18 | }
      | ^
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
In file included from test.c:5:
arraylist.c:15:14: error: unused variable ‘lista’ [-Werror=unused-variable]
   15 |   ArrayList *lista = malloc(sizeof(ArrayList);
      |              ^~~~~
test.c:435: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:36:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   36 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e1c8b7d
Thu 30 Mar 2023 03:48:26 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:46: error: expected ‘)’ before ‘;’ token
   15 |   ArrayList *lista = malloc(sizeof(ArrayList);
      |                            ~                 ^
      |                                              )
arraylist.c:19:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   19 | }
      | ^
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
In file included from test.c:5:
arraylist.c:15:14: error: unused variable ‘lista’ [-Werror=unused-variable]
   15 |   ArrayList *lista = malloc(sizeof(ArrayList);
      |              ^~~~~
test.c:435: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:37:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   37 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5d50e85
Thu 30 Mar 2023 03:49:11 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:59: error: expected ‘)’ before ‘;’ token
   15 |   ArrayList *lista = (ArrayList *)malloc(sizeof(ArrayList);
      |                                         ~                 ^
      |                                                           )
arraylist.c:19:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   19 | }
      | ^
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
In file included from test.c:5:
arraylist.c:15:14: error: unused variable ‘lista’ [-Werror=unused-variable]
   15 |   ArrayList *lista = (ArrayList *)malloc(sizeof(ArrayList);
      |              ^~~~~
test.c:435: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:37:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   37 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
df7c0c5
Thu 30 Mar 2023 03:51:50 PM UTC: 
 arraylist.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:56: error: expected ‘)’ before ‘;’ token
   15 |   ArrayList *lista = (ArrayList *)malloc(sizeof(void *);
      |                                         ~              ^
      |                                                        )
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
In file included from test.c:5:
arraylist.c:15:14: error: unused variable ‘lista’ [-Werror=unused-variable]
   15 |   ArrayList *lista = (ArrayList *)malloc(sizeof(void *);
      |              ^~~~~
test.c:435: error: control reaches end of non-void function [-Werror=return-type]
cc1: all warnings being treated as errors
Compilation failed
aa86ea9
Thu 30 Mar 2023 03:52:17 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:19:48: error: expected ‘)’ before ‘;’ token
   19 |   lista->data = (void **) malloc(sizeof(void *);
      |                                 ~              ^
      |                                                )
arraylist.c:21:16: error: expected ‘;’ before ‘}’ token
   21 |   return lista;
      |                ^
      |                ;
   22 | }
      | ~               
arraylist.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
20bce2e
Thu 30 Mar 2023 03:52:32 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:8: error: array subscript ‘ArrayList {aka struct ArrayList}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   17 |   lista->capacity = 2;
      |        ^~
arraylist.c:15:35: note: referencing an object of size 8 allocated by ‘malloc’
   15 |   ArrayList *lista = (ArrayList *)malloc(sizeof(void *));
      |                                   ^~~~~~~~~~~~~~~~~~~~~~
arraylist.c:18:8: error: array subscript ‘ArrayList {aka struct ArrayList}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   18 |   lista->size = 0;
      |        ^~
arraylist.c:15:35: note: referencing an object of size 8 allocated by ‘malloc’
   15 |   ArrayList *lista = (ArrayList *)malloc(sizeof(void *));
      |                                   ^~~~~~~~~~~~~~~~~~~~~~
arraylist.c:19:8: error: array subscript ‘ArrayList {aka struct ArrayList}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   19 |   lista->data = (void **) malloc(sizeof(void *));
      |        ^~
arraylist.c:15:35: note: referencing an object of size 8 allocated by ‘malloc’
   15 |   ArrayList *lista = (ArrayList *)malloc(sizeof(void *));
      |                                   ^~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4994d9d
Thu 30 Mar 2023 03:55:10 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
eb2f1cb
Thu 30 Mar 2023 04:07:43 PM UTC: 
 arraylist.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
4a6e102
Thu 30 Mar 2023 04:22:01 PM UTC: 
 arraylist.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:47:26: error: ‘k’ undeclared (first use in this function)
   47 |     l->data[j] = l->data[k + 1];
      |                          ^
arraylist.c:47:26: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ec213e9
Thu 30 Mar 2023 04:22:07 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
06df382
Thu 30 Mar 2023 04:26:50 PM UTC: 
 arraylist.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
0aa7500
Thu 30 Mar 2023 04:27:29 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
43acf8b
Thu 30 Mar 2023 04:27:42 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
607faeb
Thu 30 Mar 2023 04:28:01 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9271fac
Thu 30 Mar 2023 04:28:28 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
79b4202
Thu 30 Mar 2023 07:33:25 PM UTC: 
 arraylist.c | 34 ++++++++++++++++++++++++++++++++--
 1 file changed, 32 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 30/70
4553224
Thu 30 Mar 2023 07:34:06 PM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|3
total_score: 30/70
268ecd7
Thu 30 Mar 2023 07:36:37 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 30/70
f5a34b6
Thu 30 Mar 2023 07:38:31 PM UTC: 
 arraylist.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|3
total_score: 30/70
50d8570
Thu 30 Mar 2023 07:39:20 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|2
total_score: 40/70
a465be2
